[package]
name = "myscheme"
repository = "https://github.com/ianzhao05/myscheme"
version = "0.1.0"
edition = "2021"
exclude = ["myscheme-wasm"]

[dependencies]
num = "0.4"
regex = "1.6.0"
getrandom = { version = "0.2", features = ["js"] }
const_format = "0.2.34"
itertools = "0.14.0"

[dependencies.uuid]
version = "1.3.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
assert_fs = "1.0.13"

[workspace]
members = ["myscheme-wasm"]
