[package]
name = "myscheme"
repository = "https://github.com/ianzhao05/myscheme"
version = "0.1.0"
edition = "2024"
exclude = ["myscheme-wasm"]

[dependencies]
num = "0.4"
regex = "1.11.1"
const_format = "0.2.34"
itertools = "0.14.0"

[dev-dependencies]
assert_fs = "1.1.3"

[workspace]
members = ["myscheme-wasm"]
